# pch08_merger_trees

./: .gitignore  CMakeLists.txt  Makefile  growth_rate.F90  make_tree.F90  modified_merger_tree.F90  split_PCH.F90  trees.F90  unresolved_mass.F90
output/: eps_mphalo1e12_z4.txt  pch_mphalo1e12_z4.txt
plots/: extract_galform_progenitors.py  plot_progenitors.py
